# balance_api/openapi/spec.yaml
@@ -376,6 +376,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/Account'
 
+    delete:
+      summary: Delete an user account
+      security:
+        - oauth2:
+            - uid
+      operationId: balance_api.api.accounts.delete_account
+      description: Delete an user account
+      parameters:
+        - $ref: '#/components/parameters/AccountId'
+      responses:
+        204:
+          description: NO CONTENT
 
   /tags:
     get:
